# whichbid

./: .env.example  .gitignore  README.md  architecture.md  cli.py  docker-compose.yml  render.yaml
whichbid/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
whichbid-ui/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
whichbid-ui/src/app/: globals.css  layout.tsx  page.tsx
whichbid-ui/src/components/: AnalysisHistory.tsx  CriteriaForm.tsx  DownloadButton.tsx  FileUpload.tsx  Logo.tsx  ProcessingIndicator.tsx  ResultsDisplay.tsx  SavingsDashboard.tsx  ShareButton.tsx  ThemeToggle.tsx  index.ts
whichbid-ui/src/contexts/: ThemeContext.tsx
whichbid-ui/src/lib/: api.ts
whichbid-ui/src/types/: index.ts
whichbid/api/: routes.py
whichbid/core/: analyzer.py  extractor.py  llm.py  models.py  parser.py  pipeline.py
whichbid/scripts/: generate_sample_quotes.py
