[tool.poetry]
name = "whichbid"
version = "1.0.0"
description = "AI-powered vendor quote comparison and analysis for small businesses"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-multipart = "^0.0.18"
pydantic = "^2.10.0"
openai = "^1.59.0"
pdfplumber = "^0.11.0"
typer = "^0.15.0"
rich = "^13.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
fpdf2 = "^2.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
